--- a/modelo_base_fija/modeloDDPG_base_fija.ipynb
+++ b/modelo_base_fija/modeloDDPG_base_fija.ipynb
@@ -31,7 +31,7 @@
     "from HistorySaverCallback import HistorySaverCallback\n",
     "\n",
     "from rl.agents import DDPGAgent_her\n",
-    "from rl.memory_her import SequentialMemory\n",
+    "from rl.memory_mod import SequentialMemory\n",
     "from rl.random import OrnsteinUhlenbeckProcess\n",
     "from rl.callbacks import FileLogger, ModelIntervalCheckpoint"
    ]
