--- a/modelo_base_fija/modeloDDPG_base_fija.ipynb
+++ b/modelo_base_fija/modeloDDPG_base_fija.ipynb
@@ -30,7 +30,7 @@
     "from MemorySaverCallback import MemorySaverCallback\n",
     "from HistorySaverCallback import HistorySaverCallback\n",
     "\n",
-    "from rl.agents import DDPGAgent_her\n",
+    "from rl.agents import DDPGAgent_mod\n",
     "from rl.memory_mod import SequentialMemory\n",
     "from rl.random import OrnsteinUhlenbeckProcess\n",
     "from rl.callbacks import FileLogger, ModelIntervalCheckpoint"
