--- a/modelo_base_fija/modeloDDPG_base_fija.ipynb
+++ b/modelo_base_fija/modeloDDPG_base_fija.ipynb
@@ -239,7 +239,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ddpg=DDPGAgent_her(nb_actions=nb_actions, actor=actor_model, critic=critic_model, critic_action_input=action_input,\n",
+    "ddpg=DDPGAgent_mod(nb_actions=nb_actions, actor=actor_model, critic=critic_model, critic_action_input=action_input,\n",
     "               memory=memory, gamma=0.99, batch_size=128, nb_steps_warmup_critic=130,\n",
     "               nb_steps_warmup_actor=130, train_interval=1, memory_interval=1,\n",
     "               delta_range=None, random_process=random_process,\n",
